--- a/com.knime.enterprise.cloud.service.repository.app/pom.xml
+++ b/com.knime.enterprise.cloud.service.repository.app/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>cloud.service.repository.app</artifactId>
-	<packaging>liberty-assembly</packaging>
+	<packaging>jar</packaging>
 
 	<properties>
 		<liberty.packaging.type>minify,runnable</liberty.packaging.type>
@@ -27,32 +27,7 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>copy-resources</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>src/main/liberty/config</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>src/main/resources/</directory>
-                                    <filtering>true</filtering>
-                                    <includes>
-                                        <include>server.xml</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>		
+		<plugins>	
 			<plugin>
 				<groupId>net.wasdev.wlp.maven.plugins</groupId>
 				<artifactId>liberty-maven-plugin</artifactId>
